# readEmployeeDB

./: LICENSE  README.md  pyproject.toml
reademployeedb/: dbconnections.py  employee.py  main.py
reademployeedb/db/: employeedb.db
